<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nikhil.intelimentapp.DashboardActivity">


    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="fill_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_alignParentTop="true"
        android:background="@color/gray"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hvItem1"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/ht_text1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/light_black"
                android:visibility="visible" />


            <TextView
                android:id="@+id/hvItem2"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/ht_text2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_black" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/light_black"
                android:visibility="visible" />


            <TextView
                android:id="@+id/hvItem3"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/ht_text3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_black" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/light_black"
                android:visibility="visible" />

            <TextView
                android:id="@+id/hvItem4"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/ht_text4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_black" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/light_black"
                android:visibility="visible" />

            <TextView
                android:id="@+id/hvItem5"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/ht_text5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_black" />


        </LinearLayout>


    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:elevation="2dp"
                android:orientation="vertical">

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@android:color/white">

                </android.support.v4.view.ViewPager>

                <com.matthewtamlin.sliding_intro_screen_library.SelectionIndicator
                    android:id="@+id/selectInd"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="-35dp"
                    android:gravity="center"
                    app:activeDotColor="@color/light_black"
                    app:activeItemIndex="0"
                    app:inactiveDotColor="@color/gray"
                    app:numberOfItems="4" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:elevation="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLeft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="Left"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCenter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="10dp"
                    android:text="Right"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:elevation="2dp"
                android:gravity="left"
                android:padding="10dp"
                android:text="Left"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:elevation="2dp"
                android:gravity="center"
                android:weightSum="3">


                <Button
                    android:id="@+id/btnRed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:elevation="3dp"
                    android:text="Red" />

                <Button
                    android:id="@+id/btnYellow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="Yellow" />

                <Button
                    android:id="@+id/btnGreen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="Green" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>

